[project]
name = "openai-agent-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Umar Hayat",email = "umarhayat.coder@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents (>=0.0.17,<0.0.18)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"